# Obsidian_agent

./: .env  .gitignore  DEPLOYMENT_CHECKLIST.md  GETTING_STARTED.md  PROJECT_SUMMARY.md  README.md  README_DEPLOYMENT.md  README_OBSIDIAN_TOOLS.md  README_PROJECT.md  USER_GUIDE.md  data.json  demo.py  demo_new_features.py  esbuild.config.mjs  install_plugin.bat  install_plugin.sh  main.js  main.py  main.ts  manifest.json  package-lock.json  package.json  pyproject.toml  requirements.txt  start_agent.bat  start_agent.sh  styles.css  test.py  test_file.txt  test_markitdown.py  test_markitdown_api.py  test_obsidian_tools.py  test_ollama_simple.py  test_plugin.py  tsconfig.json
src/: api_server.py  deepseek_agen.py  gemini_agen.py  obsidian.py  qwen_agen.py  tools.py
